Avvikelse: Updated api
